refactor(event): replace withDependencies chaining with Dependencies
Replace the method chaining API (withDependencies().after().before()) with a single Dependencies parameter passed to register(). This simplifies the API and makes dependencies explicit. Additionally, duplicate key registration no longer throws IllegalStateException, allowing listeners to be overwritten.

BREAKING CHANGE: The withDependencies() method chaining API has been removed. Duplicate key registration no longer throws IllegalStateException.